--- a/src/themes/ec/variables/_featured-item.scss
+++ b/src/themes/ec/variables/_featured-item.scss
@@ -28,6 +28,7 @@ $featured-item: (
     title-background: var(--c-n-60),
     item-background: var(--c-n-40),
     media-padding: var(--s-xl),
+    media-padding-right: var(--s-xl),
     link-spacing: var(--s-m) 0 0 var(--s-xl),
     padding-mobile: 0,
     padding-desktop: 0,
