--- a/src/themes/eu/variables/_featured-item.scss
+++ b/src/themes/eu/variables/_featured-item.scss
@@ -29,6 +29,7 @@ $featured-item: (
     item-background: transparent,
     link-spacing: var(--s-m) 0 0 0,
     media-padding: 0 var(--s-m) var(--s-m) 0,
+    media-padding-right: 0 0 var(--s-m) var(--s-m),
     padding-mobile: var(--s-m) var(--s-m) var(--s-m) var(--s-xs),
     padding-desktop: var(--s-m) var(--s-m) var(--s-m) var(--s-l),
     border-size: 8px,
